--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && cd dist && git init && git add -A && git commit -m 'Deploy' && git push -f https://github.com/Shahnab/santaclaustracker.git main:gh-pages && cd .."
+    "deploy": "vite build && cd dist && git init && git add -A && git commit -m 'Deploy' && git push -f https://github.com/Shahnab/santaclaustracker.git master:gh-pages && cd .."
   },
   "dependencies": {
     "react": "^19.2.3",
